[package]
name = "mctokio"
version = "0.1.0"
authors = ["Joey Sacchini <joey@sacchini.net>"]
edition = "2018"
license = "APACHE 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcproto-rs = { path = "../mcproto-rs" }
tokio = { version = "1.20.0", features = ["full"] }
aes = "0.6.0"
flate2 = { version = "1.0.17", features = ["zlib"] }
anyhow = "1.0"
